@@ -1,6 +1,16 @@
 lxml changelog
 ==============
 
+current
+=======
+
+Features added
+--------------
+
+Bugs fixed
+----------
+
+
 1.0.beta (2006-05-18)
 =====================
 
